# WealthElf_Market_Signals

./: app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-0LNB-SG-XBT-Bitcoin-Tracker-Euro-AGAP-L-WisdomTree-Agriculture-AGCP-L-WisdomTree-Broad-Commodities-A-1739880998797.txt
components/: auth.py  data_table.py  filters.py  navigation.py
data/: user_preferences.json
pages/: 1_📊_Alerts.py  2_📈_Signals.py  3_⚙️_Settings.py
utils/: auth.py  data_operations.py  database.py  gsheets.py  settings_manager.py
