[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.161.0",
    "google-auth>=2.38.0",
    "numpy>=2.2.3",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "streamlit>=1.42.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
]
